--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "build:ui": "rm -rf dist && cd \"~/Downloads/PKF 48 docs/doc 1/web dev/React/phone book/\" && npm run build && cp -r dist \"~/Downloads/PKF 48 docs/doc 1/web dev/React/phone server/\"",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "stac virus",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
